--- a/tradingplatform-generator/src/main/resources/template/entity.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/entity.java.vm
@@ -41,80 +41,93 @@ public class ${entity} implements Serializable {
     private static final long serialVersionUID = 1L;
 
 ## ----------  BEGIN 字段循环遍历  ----------
-#foreach($field in ${table.fields})
-#if(${field.keyFlag})
-#set($keyPropertyName=${field.propertyName})
-#end
 
-#if("$!field.comment" != "")
-    /**
-     * ${field.comment}
-     */
-	@ApiModelProperty("${field.comment}")
-#end
-#if(${field.keyFlag})
-## 主键
-#if(${field.keyIdentityFlag})
-	@TableId(value="${field.name}", type= IdType.AUTO)
-#elseif(${field.convert})
-    @TableId("${field.name}")
-#end
-## 普通字段
-#elseif(${field.fill})
-## -----   存在字段填充设置   -----
-#if(${field.convert})
-	@TableField(value = "${field.name}", fill = FieldFill.${field.fill})
-#else
-	@TableField(fill = FieldFill.${field.fill})
-#end
-#elseif(!${field.convert})
-	@TableField("${field.name}")
-#end
-## 乐观锁注解
-#if(${versionFieldName}==${field.name})
-	@Version
-#end
-## 逻辑删除注解
-#if(${logicDeleteFieldName}==${field.name})
-    @TableLogic
-#end
-#if(${field.propertyType}=="Date")
-	@DateTimeFormat(pattern = "yyyy-MM-dd HH:mm:ss")
-	@JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss", timezone = "GMT+8")
-#end
-	private ${field.propertyType} ${field.propertyName};
+#foreach($field in ${table.fields})
+
+	#if( ${field.name} == "id" || ${field.name} == "uuid" || ${field.name} == "description" || ${field.name} == "deleted" || ${field.name} == "created_by" || ${field.name} == "created_at" || ${field.name} == "updated_by" || ${field.name} == "updated_at")
+		##continue
+		#else
+			#if(${field.keyFlag})
+				#set($keyPropertyName=${field.propertyName})
+			#end
+			#if("$!field.comment" != "")
+            /**
+             * ${field.comment}
+             */
+            @ApiModelProperty("${field.comment}")
+			#end
+			#if(${field.keyFlag})
+			## 主键
+				#if(${field.keyIdentityFlag})
+                @TableId(value="${field.name}", type= IdType.AUTO)
+				#elseif(${field.convert})
+                @TableId("${field.name}")
+				#end
+			## 普通字段
+			#elseif(${field.fill})
+			## -----   存在字段填充设置   -----
+				#if(${field.convert})
+                @TableField(value = "${field.name}", fill = FieldFill.${field.fill})
+				#else
+                @TableField(fill = FieldFill.${field.fill})
+				#end
+			#elseif(!${field.convert})
+            @TableField("${field.name}")
+			#end
+			## 乐观锁注解
+			#if(${versionFieldName}==${field.name})
+            @Version
+			#end
+			## 逻辑删除注解
+			#if(${logicDeleteFieldName}==${field.name})
+            @TableLogic
+			#end
+			#if(${field.propertyType}=="Date")
+
+			@DateTimeFormat(pattern = "yyyy-MM-dd HH:mm:ss")
+            @JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss", timezone = "GMT+8")
+			#end
+
+			private ${field.propertyType} ${field.propertyName};
+	#end
 #end
 ## ----------  END 字段循环遍历  ----------
 
 #if(!${entityLombokModel})
 #foreach($field in ${table.fields})
-#if(${field.propertyType.equals("boolean")})
-#set($getprefix="is")
-#else
-#set($getprefix="get")
-#end
+	#if(${field.name} == "id" || ${field.name} == "uuid" || ${field.name} == "description" || ${field.name} == "deleted" || ${field.name} == "created_by" || ${field.name} == "created_at" || ${field.name} == "updated_by" || ${field.name} == "updated_at")
+		#else
+			#if(${field.propertyType.equals("boolean")})
+				#set($getprefix="is")
+			#else
+				#set($getprefix="get")
+			#end
 
-	public ${field.propertyType} ${getprefix}${field.capitalName}() {
-		return ${field.propertyName};
-	}
+        	public ${field.propertyType} ${getprefix}${field.capitalName}() {
+                return ${field.propertyName};
+                }
 
-#if(${entityBuilderModel})
-	public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-#else
-	public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+			#if(${entityBuilderModel})
+            public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+			#else
+            public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+			#end
+                this.${field.propertyName} = ${field.propertyName};
+			#if(${entityBuilderModel})
+                    return this;
+			#end
+                }
+	#end
 #end
-		this.${field.propertyName} = ${field.propertyName};
-#if(${entityBuilderModel})
-		return this;
-#end
-	}
-#end
-#end
+	#end
+
 
 #if(${entityColumnConstant})
 #foreach($field in ${table.fields})
-	public static final String ${field.name.toUpperCase()} = "${field.name}";
-
+	#if(${field.name} == "id" || ${field.name} == "uuid" || ${field.name} == "description" || ${field.name} == "deleted" || ${field.name} == "created_by" || ${field.name} == "created_at" || ${field.name} == "updated_by" || ${field.name} == "updated_at")
+		#else
+        public static final String ${field.name.toUpperCase()} = "${field.name}";
+	#end
 #end
 #end
 #*#if(${activeRecord})
@@ -133,10 +146,13 @@ public class ${entity} implements Serializable {
 	public String toString() {
 		return "${entity}{" +
 #foreach($field in ${table.fields})
+	#if(${field.name} == "id" || ${field.name} == "uuid" || ${field.name} == "description" || ${field.name} == "deleted" || ${field.name} == "created_by" || ${field.name} == "created_at" || ${field.name} == "updated_by" || ${field.name} == "updated_at")
+		#else
 #if($!{velocityCount}==1)
 			"${field.propertyName}=" + ${field.propertyName} +
 #else
 			", ${field.propertyName}=" + ${field.propertyName} +
+#end
 #end
 #end
 			"}";
