--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -1,8 +1,11 @@
-package ${package.Controller};
+##package ${package.Controller};
+package com.secondhand.tradingplatformadmincontroller.controller;
 
 import com.baomidou.mybatisplus.plugins.Page;
-import com.mpdemo.util.JsonResult;
-import com.mpdemo.util.TableJson;
+##import com.mpdemo.util.JsonResult;
+##import com.mpdemo.util.TableJson;
+import com.secondhand.tradingplatformcommon.util.JsonResult;
+import com.secondhand.tradingplatformcommon.util.TableJson;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
@@ -15,8 +18,10 @@ import java.util.Map;
 #if(${superControllerClassPackage})
 import ${superControllerClassPackage};
 #end
-import ${package.Service}.${table.serviceName};
-import ${package.Entity}.${entity};
+##import ${package.Service}.${table.serviceName};
+##import ${package.Entity}.${entity};
+import com.secondhand.tradingplatformadminentity.entity.${entity};
+import com.secondhand.tradingplatformadminservice.service.${entity}Service;
 
 #if(${restControllerStyle})
 @RestController
@@ -66,8 +71,8 @@ public class ${table.controllerName} {
      */
     @GetMapping(value = "/get_by_id/{${table.entityPath}Id}", produces = {"application/json"})
     @ApiOperation(value = "/get_by_id/{${table.entityPath}Id}", notes = "根据id获取${table.entityPath}")
-    public JSONResult<${entity}> get${entity}ById( @ApiParam(name = "id",value = "${table.entityPath}Id") @PathVariable("${table.entityPath}Id") Long ${table.entityPath}Id)) {
-            JSONResult<${entity}> resJson = new JSONResult<>();
+    public JsonResult<${entity}> get${entity}ById( @ApiParam(name = "id",value = "${table.entityPath}Id") @PathVariable("${table.entityPath}Id") Long ${table.entityPath}Id) {
+            JsonResult<${entity}> resJson = new JsonResult<>();
             ${entity} ${table.entityPath} = ${table.entityPath}Service.selectOneByObj(${table.entityPath}Id);
             resJson.setData(${table.entityPath});
             resJson.setSuccess(true);
