--- a/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
@@ -1,37 +1,56 @@
-package ${package.ServiceImpl};
+##package ${package.ServiceImpl};
+##
+##import ${package.Entity}.${entity};
+##import ${package.Mapper}.${table.mapperName};
+##import ${package.Service}.${table.serviceName};
+package com.secondhand.tradingplatformadmincontroller.serviceimpl;
 
-import ${package.Entity}.${entity};
-import ${package.Mapper}.${table.mapperName};
-import ${package.Service}.${table.serviceName};
+import com.secondhand.tradingplatformadminentity.entity.${entity};
+import com.secondhand.tradingplatformadminmapper.mapper.${entity}Mapper;
+import com.secondhand.tradingplatformadminservice.service.${entity}Service;
 import ${superServiceImplClassPackage};
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+import java.util.Map;
+
 /**
- *code is far away from bug with the animal protecting
- *  ┏┓　　　┏┓
- *┏┛┻━━━┛┻┓
- *┃　　　　　　　┃ 　
- *┃　　　━　　　┃
- *┃　┳┛　┗┳　┃
- *┃　　　　　　　┃
- *┃　　　┻　　　┃
- *┃　　　　　　　┃
- *┗━┓　　　┏━┛
- *　　┃　　　┃神兽保佑
- *　　┃　　　┃代码无BUG！
- *　　┃　　　┗━━━┓
- *　　┃　　　　　　　┣┓
- *　　┃　　　　　　　┏┛
- *　　┗┓┓┏━┳┓┏┛
- *　　　┃┫┫　┃┫┫
- *　　　┗┻┛　┗┻┛
- *　　
  *   @description : ${entity} 服务实现类
  *   ---------------------------------
  * 	 @author ${author}
  *   @since ${date}
  */
+
 @Service
 public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.mapperName}, ${entity}> implements ${table.serviceName} {
-	
+
+    @Autowired
+    private ${entity}Mapper ${table.entityPath}Mapper;
+
+    @Override
+    public boolean fakeDeleteById(Long ${table.entityPath}Id) {
+        return ${table.entityPath}Mapper.fakeDeleteById(${table.entityPath}Id);
+    }
+
+    @Override
+    public boolean fakeBatchDelete(List<Long> ${table.entityPath}Ids) {
+        return ${table.entityPath}Mapper.fakeBatchDelete(${table.entityPath}Ids);
+    }
+
+    @Override
+    public Map<String, Object> selectMapById(Long ${table.entityPath}Id) {
+        return ${table.entityPath}Mapper.selectMapById(${table.entityPath}Id);
+    }
+
+    @Override
+    public ${entity} ${table.entityPath}CreateUpdate(${entity} ${table.entityPath}) {
+        Long ${table.entityPath}Id = ${table.entityPath}.getId();
+        if (${table.entityPath}Id == null){
+            ${table.entityPath}Mapper.insert(${table.entityPath});
+        } else {
+            ${table.entityPath}Mapper.updateById(${table.entityPath});
+        }
+        return ${table.entityPath};
+    }
 }
