--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -2,10 +2,10 @@
 package com.secondhand.tradingplatformadmincontroller.controller;
 
 import com.baomidou.mybatisplus.plugins.Page;
-##import com.mpdemo.util.JsonResult;
+##import com.mpdemo.util.jsonResult;
 ##import com.mpdemo.util.TableJson;
-import com.secondhand.tradingplatformcommon.util.JsonResult.JsonResult;
-import com.secondhand.tradingplatformcommon.util.JsonResult.TableJson;
+import com.secondhand.tradingplatformcommon.util.jsonResult.JsonResult;
+import com.secondhand.tradingplatformcommon.util.jsonResult.TableJson;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
