--- a/tradingplatform-generator/src/main/resources/template/mapper.xml.vm
+++ b/tradingplatform-generator/src/main/resources/template/mapper.xml.vm
@@ -12,7 +12,7 @@
 	#if(${baseResultMap})
 		<!-- 通用查询映射结果 -->
 	##	<resultMap id="BaseResultMap" type="${package.Entity}.${entity}">
-		<resultMap id="${table.entityPath}Map" type="com.secondhand.tradingplatformadminentity.entity.${entity}" extends="com.secondhand.tradingplatformcommon.base.BaseMapper.BaseEntityMapper.baseEntityMapper">
+		<resultMap id="${table.entityPath}Map" type="com.secondhand.tradingplatformadminentity.entity.${entity}" extends="com.secondhand.tradingplatformadminmapper.mapper.BaseEntityMapper.baseEntityMapper">
 	##foreach($field in ${table.fields})
 	##if(${field.keyFlag})##生成主键排在第一位
 	##		<id column="${field.name}" property="${field.propertyName}" />
