--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -4,8 +4,8 @@ package com.secondhand.tradingplatformadmincontroller.controller;
 import com.baomidou.mybatisplus.plugins.Page;
 ##import com.mpdemo.util.jsonResult;
 ##import com.mpdemo.util.TableJson;
-import com.secondhand.tradingplatformcommon.util.jsonResult.JsonResult;
-import com.secondhand.tradingplatformcommon.util.jsonResult.TableJson;
+import com.secondhand.tradingplatformcommon.jsonResult.JsonResult;
+import com.secondhand.tradingplatformcommon.jsonResult.TableJson;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
@@ -15,9 +15,9 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Map;
 
-    #if(${superControllerClassPackage})
-    import ${superControllerClassPackage};
-    #end
+#if(${superControllerClassPackage})
+import ${superControllerClassPackage};
+#end
 ##import ${package.Service}.${table.serviceName};
 ##import ${package.Entity}.${entity};
 import com.secondhand.tradingplatformadminentity.entity.${entity};
