--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -1,15 +1,16 @@
 ##package ${package.Controller};
-package com.secondhand.tradingplatformadmincontroller.controller;
+package com.secondhand.tradingplat${table.entityPath}admincontroller.controller;
 
 import com.baomidou.mybatisplus.plugins.Page;
 ##import com.mpdemo.util.jsonResult;
 ##import com.mpdemo.util.TableJson;
-import com.secondhand.tradingplatformcommon.jsonResult.JsonResult;
-import com.secondhand.tradingplatformcommon.jsonResult.TableJson;
+import com.secondhand.tradingplat${table.entityPath}common.jsonResult.JsonResult;
+import com.secondhand.tradingplat${table.entityPath}common.jsonResult.TableJson;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -20,8 +21,8 @@ import ${superControllerClassPackage};
 #end
 ##import ${package.Service}.${table.serviceName};
 ##import ${package.Entity}.${entity};
-import com.secondhand.tradingplatformadminentity.entity.${entity};
-import com.secondhand.tradingplatformadminservice.service.${entity}Service;
+import com.secondhand.tradingplat${table.entityPath}adminentity.entity.${entity};
+import com.secondhand.tradingplat${table.entityPath}adminservice.service.${entity}Service;
 
 /**
  * @description : ${entity} 控制器
@@ -45,6 +46,42 @@ public class ${table.controllerName} {
     private ${table.serviceName} ${table.entityPath}Service;
 
     /**
+     * @description : 跳转到列表页面
+     * @author : ${author}
+     * @since : Create in ${date}
+     */
+    @GetMapping(value = "/tabulation.html")
+    @ApiOperation(value = "/tabulation.html", notes = "跳转到${table.entityPath}的列表页面")
+    public String to${entity}List(Model model) {
+        return "${table.entityPath}/tabulation";
+    }
+
+    /**
+     * @description : 跳转到修改${table.entityPath}的页面
+     * @author : ${author}
+     * @since : Create in ${date}
+     */
+    @GetMapping(value = "/{${table.entityPath}Id}/update.html")
+    @ApiOperation(value = "/{${table.entityPath}Id}/update.html", notes = "跳转到修改页面")
+    public String toUpdate${entity}(Model model, @PathVariable(value = "${table.entityPath}Id") Long ${table.entityPath}Id) {
+        //静态注入要回显的数据
+        Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.selectMapById(${table.entityPath}Id);
+        model.addAttribute("${table.entityPath}", ${table.entityPath});
+        return "${table.entityPath}/new${entity}";
+    }
+
+    /**
+     * @description : 跳转到新增${table.entityPath}的页面
+     * @author : ${author}
+     * @since : Create in ${date}
+     */
+    @GetMapping(value = "/create.html")
+    @ApiOperation(value = "/create.html", notes = "跳转到新增页面")
+    public String toCreate${entity}(Model model) {
+        return "${table.entityPath}/new${entity}";
+    }
+    
+    /**
      * @description : 获取分页列表
      * @author : ${author}
      * @since : Create in ${date}
@@ -65,21 +102,6 @@ public class ${table.controllerName} {
             ${table.entityPath}Page = ${table.entityPath}Service.selectPageWithParam(${table.entityPath}Page, ${table.entityPath});
             resJson.setRecordsTotal(${table.entityPath}Page.getTotal());
             resJson.setData(${table.entityPath}Page.getRecords());
-            resJson.setSuccess(true);
-            return resJson;
-    }
-
-    /**
-     * @description : 通过id获取${table.entityPath}
-     * @author : ${author}
-     * @since : Create in ${date}
-     */
-    @GetMapping(value = "/get_by_id/{${table.entityPath}Id}", produces = {"application/json"})
-    @ApiOperation(value = "/get_by_id/{${table.entityPath}Id}", notes = "根据id获取${table.entityPath}")
-    public JsonResult<${entity}> get${entity}ById( @ApiParam(name = "id",value = "${table.entityPath}Id") @PathVariable("${table.entityPath}Id") Long ${table.entityPath}Id) {
-            JsonResult<${entity}> resJson = new JsonResult<>();
-            ${entity} ${table.entityPath} = ${table.entityPath}Service.selectOneByObj(${table.entityPath}Id);
-            resJson.setData(${table.entityPath});
             resJson.setSuccess(true);
             return resJson;
     }
