--- a/tradingplatform-generator/src/main/resources/template/mapper.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/mapper.java.vm
@@ -6,6 +6,8 @@ package com.secondhand.tradingplatformadminmapper.mapper;
 
 import com.secondhand.tradingplatformadminentity.entity.${entity};
 import com.secondhand.tradingplatformcommon.base.BaseDao.BaseDao;
+import com.secondhand.tradingplatformcommon.redisCache.RedisCache;
+import org.apache.ibatis.annotations.CacheNamespace;
 import org.apache.ibatis.annotations.Param;
 import org.apache.ibatis.annotations.Select;
 import org.springframework.stereotype.Repository;
@@ -21,6 +23,7 @@ import java.util.Map;
  *   @since ${date}
  */
 @Repository
+@CacheNamespace(implementation = RedisCache.class)
 public interface ${table.mapperName} extends ${superMapperClass}<${entity}> {
 
     /**
