--- a/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
@@ -11,6 +11,7 @@ import com.secondhand.tradingplatformadminservice.service.${entity}Service;
 import ${superServiceImplClassPackage};
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
@@ -30,12 +31,19 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
 
     @Override
     public boolean fakeDeleteById(Long ${table.entityPath}Id) {
-        return ${table.entityPath}Mapper.fakeDeleteById(${table.entityPath}Id);
+        ${entity} ${table.entityPath} = new ${entity}();
+        ${table.entityPath}.setId(${table.entityPath}Id);
+        ${table.entityPath}.setDeleted(true);
+        return ${table.entityPath}Mapper.updateById(${table.entityPath});
     }
 
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public boolean fakeBatchDelete(List<Long> ${table.entityPath}Ids) {
-        return ${table.entityPath}Mapper.fakeBatchDelete(${table.entityPath}Ids);
+        for (Long ${table.entityPath}Id : ${table.entityPath}Ids){
+            fakeDeleteById(${table.entityPath}Id);
+        }
+        return true;
     }
 
     @Override
