--- a/tradingplatform-generator/src/main/resources/template/mapper.xml.vm
+++ b/tradingplatform-generator/src/main/resources/template/mapper.xml.vm
@@ -70,7 +70,7 @@
 	#end
 
     <select id="selectMapById" resultType="java.util.Map">
-        select * from ${table.name} where id = #{${table.entityPath}Id}
+        select * from ${table.name} where id = #{${table.entityPath}Id} and deleted = false
     </select>
 
 
