--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -4,13 +4,14 @@ package com.secondhand.tradingplat${table.entityPath}admincontroller.controller;
 import com.baomidou.mybatisplus.plugins.Page;
 ##import com.mpdemo.util.jsonResult;
 ##import com.mpdemo.util.TableJson;
-import com.secondhand.tradingplat${table.entityPath}common.jsonResult.JsonResult;
-import com.secondhand.tradingplat${table.entityPath}common.jsonResult.TableJson;
+import com.secondhand.tradingplatformcommon.jsonResult.JsonResult;
+import com.secondhand.tradingplatformcommon.jsonResult.TableJson;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
 import org.apache.shiro.SecurityUtils;
 import org.apache.shiro.authz.UnauthorizedException;
+import org.apache.shiro.subject.Subject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -23,8 +24,8 @@ import ${superControllerClassPackage};
 #end
 ##import ${package.Service}.${table.serviceName};
 ##import ${package.Entity}.${entity};
-import com.secondhand.tradingplat${table.entityPath}adminentity.entity.${entity};
-import com.secondhand.tradingplat${table.entityPath}adminservice.service.${entity}Service;
+import com.secondhand.tradingplatformadminentity.entity.${entity};
+import com.secondhand.tradingplatformadminservice.service.${entity}Service;
 
 /**
  * @description : ${entity} 控制器
@@ -93,6 +94,7 @@ public class ${table.controllerName} {
     public TableJson<${entity}> get${entity}List(@ApiParam(name = "${entity}", value = "${entity} 实体类") @RequestBody ${entity} ${table.entityPath}) {
             TableJson<${entity}> resJson = new TableJson<>();
             Page resPage = ${table.entityPath}.getPage();
+            ${table.entityPath}.setDeleted(false);
             Integer current = resPage.getCurrent();
             Integer size = resPage.getSize();
             if (current == null && size == null) {
