--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -68,7 +68,7 @@ public class ${table.controllerName} {
     @ApiOperation(value = "/{${table.entityPath}Id}/update.html", notes = "跳转到修改页面")
     public String toUpdate${entity}(Model model, @PathVariable(value = "${table.entityPath}Id") Long ${table.entityPath}Id) {
         //静态注入要回显的数据
-        Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.selectMapById(${table.entityPath}Id);
+        Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.mySelectMapById(${table.entityPath}Id);
         model.addAttribute("${table.entityPath}", ${table.entityPath});
         return "${table.entityPath}/new${entity}";
     }
@@ -103,7 +103,7 @@ public class ${table.controllerName} {
                 return resJson;
             }
             Page<${entity}> ${table.entityPath}Page = new Page<${entity}>(current, size);
-            ${table.entityPath}Page = ${table.entityPath}Service.selectPageWithParam(${table.entityPath}Page, ${table.entityPath});
+            ${table.entityPath}Page = ${table.entityPath}Service.mySelectPageWithParam(${table.entityPath}Page, ${table.entityPath});
             resJson.setRecordsTotal(${table.entityPath}Page.getTotal());
             resJson.setData(${table.entityPath}Page.getRecords());
             resJson.setSuccess(true);
@@ -119,7 +119,7 @@ public class ${table.controllerName} {
     @ApiOperation(value = "/get_map_by_id/{${table.entityPath}Id}", notes = "根据id获取${table.entityPath}Map")
     public JsonResult<Map<String, Object>> get${entity}ByIdForMap( @ApiParam(name = "id", value = "${table.entityPath}Id") @PathVariable("${table.entityPath}Id") Long ${table.entityPath}Id){
             JsonResult<Map<String, Object>> resJson = new JsonResult<>();
-            Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.selectMapById(${table.entityPath}Id);
+            Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.mySelectMapById(${table.entityPath}Id);
             resJson.setData(${table.entityPath});
             resJson.setSuccess(true);
             return resJson;
@@ -138,7 +138,7 @@ public class ${table.controllerName} {
             try{
                 //检查是否具有权限
                 subject.checkPermission("/admin/${table.entityPath}/delete");
-                ${table.entityPath}Service.fakeDeleteById(${table.entityPath}Id);
+                ${table.entityPath}Service.myFakeDeleteById(${table.entityPath}Id);
                 resJson.setSuccess(true);
             }catch (UnauthorizedException e){
                 resJson.setSuccess(false);
@@ -160,7 +160,7 @@ public class ${table.controllerName} {
             try{
                 //检查是否具有权限
                 subject.checkPermission("/admin/${table.entityPath}/batch_delete");
-                resJson.setSuccess(${table.entityPath}Service.fakeBatchDelete(${table.entityPath}Ids));
+                resJson.setSuccess(${table.entityPath}Service.myFakeBatchDelete(${table.entityPath}Ids));
             }catch(UnauthorizedException e){
                 resJson.setSuccess(false);
                 resJson.setMessage(e.getMessage());
@@ -181,7 +181,7 @@ public class ${table.controllerName} {
             try{
                 //检查是否具有权限
                 subject.checkPermission("/admin/${table.entityPath}/create_update");
-                ${table.entityPath} = ${table.entityPath}Service.${table.entityPath}CreateUpdate(${table.entityPath});
+                ${table.entityPath} = ${table.entityPath}Service.my${entity}CreateUpdate(${table.entityPath});
                 resJson.setData(${table.entityPath});
                 resJson.setSuccess(true);
             }catch(UnauthorizedException e){
