--- a/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
@@ -5,15 +5,23 @@
 ##import ${package.Service}.${table.serviceName};
 package com.secondhand.tradingplatformadmincontroller.serviceimpl;
 
+import com.baomidou.mybatisplus.mapper.EntityWrapper;
+import com.baomidou.mybatisplus.mapper.Wrapper;
+import com.baomidou.mybatisplus.plugins.Page;
 import com.secondhand.tradingplatformadminentity.entity.${entity};
 import com.secondhand.tradingplatformadminmapper.mapper.${entity}Mapper;
 import com.secondhand.tradingplatformadminservice.service.${entity}Service;
 import ${superServiceImplClassPackage};
 import com.secondhand.tradingplatformcommon.util.ToolUtil;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheConfig;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.Serializable;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 
@@ -25,12 +33,14 @@ import java.util.Map;
  */
 
 @Service
+@CacheConfig(cacheNames = "${table.entityPath}")
 public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.mapperName}, ${entity}> implements ${table.serviceName} {
 
     @Autowired
     private ${entity}Mapper ${table.entityPath}Mapper;
 
     @Override
+    @CacheEvict(key = "#p0")
     public Integer fakeDeleteById(Long ${table.entityPath}Id) {
         ${entity} ${table.entityPath} = new ${entity}();
         ${table.entityPath}.setId(${table.entityPath}Id);
@@ -40,6 +50,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
 
     @Override
     @Transactional(rollbackFor = Exception.class)
+    @CacheEvict(key = "#p0")
     public boolean fakeBatchDelete(List<Long> ${table.entityPath}Ids) {
         for (Long ${table.entityPath}Id : ${table.entityPath}Ids){
             fakeDeleteById(${table.entityPath}Id);
@@ -48,11 +59,13 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     }
 
     @Override
+    @Cacheable(key = "#p0")
     public Map<String, Object> selectMapById(Long ${table.entityPath}Id) {
         return ${table.entityPath}Mapper.selectMapById(${table.entityPath}Id);
     }
 
     @Override
+    @CacheEvict(key = "#p0")
     public ${entity} ${table.entityPath}CreateUpdate(${entity} ${table.entityPath}) {
         Long ${table.entityPath}Id = ${table.entityPath}.getId();
         if (${table.entityPath}Id == null){
@@ -62,5 +75,114 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
             ${table.entityPath}Mapper.updateById(${table.entityPath});
         }
         return ${table.entityPath};
+    }
+
+    //以下是继承BaseServiceImpl
+    
+    @Override
+    @Cacheable(key = "#p1")
+    public Page<${entity}> mySelectPageWithParam(Page<${entity}> page, ${entity} ${table.entityPath}) {
+        Wrapper<${entity}> wrapper = new EntityWrapper<>(${table.entityPath});
+        return this.selectPage(page, wrapper);
+    }
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public List<${entity}> mySelectListWithMap(Map<String, Object> map) {
+        return this.selectByMap(map);
+    }
+    
+    //以下是继承BaseMapper
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public Map<String, Object> mySelectMap(Wrapper<${entity}> wrapper) {
+        return this.selectMap(wrapper);
+    }
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public List<${entity}> mySelectList(Wrapper<${entity}> wrapper) {
+        return this.selectList(wrapper);
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myInsert(${entity} ${table.entityPath}) {
+        ${table.entityPath}.setUuid(ToolUtil.getUUID());
+        return this.insert(${table.entityPath});
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myInsertBatch(List<${entity}> ${table.entityPath}List) {
+        for (${entity} ${table.entityPath} : ${table.entityPath}List){
+            ${table.entityPath}.setUuid(ToolUtil.getUUID());
+        }
+        return this.insertBatch(${table.entityPath}List);
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myInsertOrUpdate(${entity} ${table.entityPath}) {
+        //没有uuid的话要加上去
+        if (${table.entityPath}.getUuid().equals(null)){
+            ${table.entityPath}.setUuid(ToolUtil.getUUID());
+        }
+        return this.insertOrUpdate(${table.entityPath});
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myInsertOrUpdateBatch(List<${entity}> ${table.entityPath}List) {
+        for (${entity} ${table.entityPath} : ${table.entityPath}List){
+        //没有uuid的话要加上去
+            if (${table.entityPath}.getUuid().equals(null)){
+                ${table.entityPath}.setUuid(ToolUtil.getUUID());
+            }
+        }
+        return this.insertOrUpdateBatch(${table.entityPath}List);
+    }
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public List<${entity}> mySelectBatchIds(Collection<? extends Serializable> ${table.entityPath}Ids) {
+        return this.selectBatchIds(${table.entityPath}Ids);
+    }
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public ${entity} mySelectById(Serializable ${table.entityPath}Id) {
+        return this.selectById(${table.entityPath}Id);
+    }
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public int mySelectCount(Wrapper<${entity}> wrapper) {
+        return this.selectCount(wrapper);
+    }
+    
+    @Override
+    @Cacheable(key = "#p0")
+    public ${entity} mySelectOne(Wrapper<${entity}> wrapper) {
+        return this.selectOne(wrapper);
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myUpdate(${entity} ${table.entityPath}, Wrapper<${entity}> wrapper) {
+        return this.update(${table.entityPath}, wrapper);
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myUpdateBatchById(List<${entity}> ${table.entityPath}List) {
+        return this.updateBatchById(${table.entityPath}List);
+    }
+    
+    @Override
+    @CacheEvict(key = "#p0")
+    public boolean myUpdateById(${entity} ${table.entityPath}) {
+        return this.updateById(${table.entityPath});
     }
 }
