--- a/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
@@ -41,7 +41,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
 
     @Override
     @CacheEvict(key = "#p0")
-    public Integer fakeDeleteById(Long ${table.entityPath}Id) {
+    public Integer myFakeDeleteById(Long ${table.entityPath}Id) {
         ${entity} ${table.entityPath} = new ${entity}();
         ${table.entityPath}.setId(${table.entityPath}Id);
         ${table.entityPath}.setDeleted(true);
@@ -51,22 +51,22 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     @Override
     @Transactional(rollbackFor = Exception.class)
     @CacheEvict(key = "#p0")
-    public boolean fakeBatchDelete(List<Long> ${table.entityPath}Ids) {
+    public boolean myFakeBatchDelete(List<Long> ${table.entityPath}Ids) {
         for (Long ${table.entityPath}Id : ${table.entityPath}Ids){
-            fakeDeleteById(${table.entityPath}Id);
+            myFakeDeleteById(${table.entityPath}Id);
         }
         return true;
     }
 
     @Override
     @Cacheable(key = "#p0")
-    public Map<String, Object> selectMapById(Long ${table.entityPath}Id) {
+    public Map<String, Object> mySelectMapById(Long ${table.entityPath}Id) {
         return ${table.entityPath}Mapper.selectMapById(${table.entityPath}Id);
     }
 
     @Override
     @CacheEvict(key = "#p0")
-    public ${entity} ${table.entityPath}CreateUpdate(${entity} ${table.entityPath}) {
+    public ${entity} my${entity}CreateUpdate(${entity} ${table.entityPath}) {
         Long ${table.entityPath}Id = ${table.entityPath}.getId();
         if (${table.entityPath}Id == null){
             ${table.entityPath}.setUuid(ToolUtil.getUUID());
