--- a/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
@@ -40,7 +40,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     private ${entity}Mapper ${table.entityPath}Mapper;
 
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public Integer myFakeDeleteById(Long ${table.entityPath}Id) {
         ${entity} ${table.entityPath} = new ${entity}();
         ${table.entityPath}.setId(${table.entityPath}Id);
@@ -50,7 +50,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myFakeBatchDelete(List<Long> ${table.entityPath}Ids) {
         ${table.entityPath}Ids.forEach(${table.entityPath}Id->{
             myFakeDeleteById(${table.entityPath}Id);
@@ -65,7 +65,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     }
 
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public ${entity} my${entity}CreateUpdate(${entity} ${table.entityPath}) {
         Long ${table.entityPath}Id = ${table.entityPath}.getId();
         if (${table.entityPath}Id == null){
@@ -107,14 +107,14 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myInsert(${entity} ${table.entityPath}) {
         ${table.entityPath}.setUuid(ToolUtil.getUUID());
         return this.insert(${table.entityPath});
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myInsertBatch(List<${entity}> ${table.entityPath}List) {
         ${table.entityPath}List.forEach(${table.entityPath} -> {
             ${table.entityPath}.setUuid(ToolUtil.getUUID());
@@ -123,7 +123,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myInsertOrUpdate(${entity} ${table.entityPath}) {
         //没有uuid的话要加上去
         if (${table.entityPath}.getUuid().equals(null)){
@@ -133,7 +133,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myInsertOrUpdateBatch(List<${entity}> ${table.entityPath}List) {
         ${table.entityPath}List.forEach(${table.entityPath} -> {
             //没有uuid的话要加上去
@@ -169,19 +169,19 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myUpdate(${entity} ${table.entityPath}, Wrapper<${entity}> wrapper) {
         return this.update(${table.entityPath}, wrapper);
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myUpdateBatchById(List<${entity}> ${table.entityPath}List) {
         return this.updateBatchById(${table.entityPath}List);
     }
     
     @Override
-    @CacheEvict(key = "#p0")
+    @CacheEvict(allEntries = true)
     public boolean myUpdateById(${entity} ${table.entityPath}) {
         return this.updateById(${table.entityPath});
     }
