--- a/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/serviceImpl.java.vm
@@ -82,6 +82,8 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     @Override
     @Cacheable(key = "#p0 + '' + #p1")
     public Page<${entity}> mySelectPageWithParam(Page<${entity}> page, ${entity} ${table.entityPath}) {
+        //判空
+        ${table.entityPath}.setDeleted(false);
         Wrapper<${entity}> wrapper = new EntityWrapper<>(${table.entityPath});
         return this.selectPage(page, wrapper);
     }
