--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
@@ -1,10 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0 user-scalable=no">
+    <meta name="renderer" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>测试</title>
+    <link rel="icon" th:href="@{/assets/favicon.png}" type="image/x-icon">
+    <link rel="stylesheet" th:href="@{/plugin/bootstrap-3.3.7/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/plugin/wave-0.7.5/waves.min.css}">
+    <link rel="stylesheet" th:href="@{/css/variable.css}">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/plugin/font/css/font-awesome.min.css}">
+    <link rel="stylesheet" th:href="@{/plugin/pnotify/pnotify.css}">
+    <link rel="stylesheet" th:href="@{/plugin/pnotify/pnotify.brighttheme.css}">
+    <link rel="stylesheet" th:href="@{/plugin/pnotify/pnotify.buttons.css}">
+    <link rel="stylesheet" th:href="@{/plugin/bootstrapValidator/css/bootstrapValidator.min.css}">
+    <!--[if IE 7]>
+    <link rel="stylesheet" th:href="@{/plugin/font/css/font-awesome-ie7.min.css}">
+    <![endif]-->
+    <!--[if lt IE 9]>
+    <script th:src="@{/compatibility/html5shiv.js}"></script>
+    <script th:src="@{/compatibility/respond.min.js}"></script>
+    <![endif]-->
 </head>
 <body>
-随便随便index测试
+<div id="torch-app">
+    <header id="header" class="bg-color">
+        <ul id="menu">
+            <li id="guide" class="line-trigger">
+                <div class="line-wrap">
+                    <div class="line top"></div>
+                    <div class="line center"></div>
+                    <div class="line bottom"></div>
+                </div>
+            </li>
+            <li id="logo" class="hidden-xs">
+                <span id="system_title" class="logo-fontSize">粤企服</span>
+            </li>
+            <li class="pull-right">
+                <a class="waves-effect waves-light" style="color: #fff;" onclick="fullPage(event)" href="javascript:void(0);"><i class="icon-fullscreen"> 全屏</i></a>
+            </li>
+        </ul>
+    </header>
+    <div id="modify-password-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">修改密码</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal" role="form" id="modifyPasswordForm" onkeydown="if(event.keyCode==13)return false;">
+                        <div class="form-group form-group-sm">
+                            <label for="old-password" class="col-sm-2 control-label">旧密码</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" id="old-password" name="oldPassword" placeholder="请输入旧密码">
+                            </div>
+                        </div>
+                        <div class="form-group form-group-sm">
+                            <label for="new-password" class="col-sm-2 control-label">新密码</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" id="new-password" name="newPassword" placeholder="请输入新密码">
+                            </div>
+                        </div>
+                        <div class="form-group form-group-sm">
+                            <label for="confirm-password" class="col-sm-2 control-label">确认密码</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" id="confirm-password" name="confirmPassword" placeholder="请确认新密码">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" onclick="modifyPassword()">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section id="main">
+        <!--左边导航栏-->
+        <aside id="sidebar" style="overflow: visible">
+            <div class="sidebar-background"></div>
+            <div class="main-menu">
+                <div class="s-profile">
+                    <a class="waves-effect waves-light" href="javascript:void(0);">
+                        <div class="sp-pic">
+                            <img th:src="@{/assets/user.jpg}">
+                        </div>
+                        <div class="sp-info">
+                            <span th:text="${user['userName']}"></span>，您好！
+                            <i class="icon-caret-down"></i>
+                        </div>
+                    </a>
+                    <ul class="menu-list s-profile-list" style="display: none">
+                        <li>
+                            <a class="waves-effect" href="javascript:void(0);" onclick="passwordModal(event)"><i class="icon-lock"></i> 修改密码</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect" href="/login"><i class="icon-circle-arrow-right"></i> 退出登录</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </aside>
+        <section id="content">
+            <div class="content_tab bg-color-tab">
+                <div class="tab_left">
+                    <a class="waves-effect waves-light" href="javascript:void(0);"><i class="icon-chevron-left"></i></a>
+                </div>
+                <div class="tab_right">
+                    <a class="waves-effect waves-light" href="javascript:void(0);"><i class="icon-chevron-right"></i></a>
+                </div>
+                <ul id="tabs" class="tabs md-fontSize">
+                    <li id="tab_home" data-index="home" data-closeable="false" class="sm-fontSize active">
+                        <a class="waves-effect waves-light" href="javascript:;">首页</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="content_main">
+                <div id="iframe_home" class="iframe active">
+                    <p></p><h4>粤企服</h4><p></p>
+                    <p><b>系统简介</b>：本系统基于配置平台，粤企服的数据展示</p><br>
+                    <p></p><h4>系统功能概述：</h4><p></p>
+                    <p><b>表单管理</b>：表单设计</p>
+                    <p><b>用户管理</b>：用户管理、角色管理、权限管理。</p><br>
+                    <p></p><h4>关于软件：</h4><p></p>
+                    <p><b>技术支持</b>：佛山市品智信息科技有限公司</p>
+                    <p><b>系统要求</b>：现代主流浏览器、ie8+，推荐使用谷歌浏览器、火狐浏览器。若使用的是国产浏览器，请使用极速模式。</a></p>
+                </div>
+            </div>
+        </section>
+    </section>
+    <footer></footer>
+</div>
+<script th:src="@{/plugin/jquery-1.10.2.min.js}"></script>
+<script th:src="@{/plugin/bootstrap-3.3.7/js/bootstrap.min.js}"></script>
+<script th:src="@{/plugin/jquery.slimscroll.min.js}"></script>
+<script th:src="@{/plugin/wave-0.7.5/waves.min.js}"></script>
+<script th:src="@{/plugin/BootstrapMenu.min.js}"></script>
+<script th:src="@{/plugin/device.min.js}"></script>
+<script th:src="@{/plugin/bootstrapValidator/js/bootstrapValidator.min.js}"></script>
+<script th:src="@{/plugin/bootstrapValidator/js/language/zh_CN.js}"></script>
+<script th:src="@{/plugin/fullPage/jquery.fullPage.min.js}"></script>
+<script th:src="@{/plugin/fullPage/jquery.jdirk.min.js}"></script>
+<script th:src="@{/plugin/pnotify/pnotify.js}"></script>
+<script th:src="@{/plugin/pnotify/pnotify.buttons.js}"></script>
+<script th:src="@{/plugin/layer/layer.js}"></script>
+<script th:inline="javascript" type="text/javascript">
+    var roleMenus = [[${roleMenus}]];
+    var userObj = [[${user}]]
+</script>
+<script th:src="@{/js/index.js}"></script>
 </body>
 </html>
